<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/white"
    tools:context=".planta">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="138dp"
        android:layout_height="134dp"
        android:contentDescription="@string/ImgWall2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.442"
        app:srcCompat="@drawable/rozinho" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="61dp"
        android:layout_height="51dp"
        android:contentDescription="@string/Img"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88"
        app:srcCompat="@drawable/trocasinal" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="131dp"
        android:layout_height="135dp"
        android:contentDescription="@string/ImgWall"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.202"
        app:srcCompat="@drawable/robozao" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="130dp"
        android:layout_height="136dp"
        android:contentDescription="@string/ImgWall3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        app:srcCompat="@drawable/wallicon" />

    <ImageView
        android:id="@+id/btnVoltar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="@string/btnPlanta"
        android:onClick="abrirCine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@drawable/planta" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="138dp"
        android:layout_height="200dp"
        android:text="@string/ExpliLixo"
        android:textColor="@color/black"
        android:textIsSelectable="false"
        android:textSize="20sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.728" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="235dp"
        android:text="@string/ExpliLixo2"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.946"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.751" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TtileName2"
        android:textColor="@color/darkgreen"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.421"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.106" />

    <View
        android:id="@+id/view7"
        android:layout_width="415dp"
        android:layout_height="40dp"
        android:background="#4BC550"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view5"
        android:layout_width="415dp"
        android:layout_height="50dp"
        android:layout_marginTop="51dp"
        android:background="#4BC550"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>