<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/white"
    tools:context=".CatalogoPlanta">

    <ImageView
        android:id="@+id/imgGuara"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/GuaPlant"
        app:layout_constraintBottom_toTopOf="@+id/imgEucali"
        app:layout_constraintEnd_toStartOf="@+id/txtGuara"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgCopa"
        app:srcCompat="@drawable/guaran_"
        tools:srcCompat="@drawable/guaran_" />

    <TextView
        android:id="@+id/txtMapa"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/green"
        android:gravity="center"
        android:text="@string/TitleName4"
        android:textColor="@color/darkgreen"
        android:textSize="24sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.103" />

    <View
        android:id="@+id/view"
        android:layout_width="415dp"
        android:layout_height="93dp"
        android:layout_marginTop="120dp"
        android:background="#4BC550"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEucali" />

    <View
        android:id="@+id/view2"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:background="#4BC550"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/view3"
        android:layout_width="415dp"
        android:layout_height="60dp"
        android:background="#4BC550"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgEucali"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/EucaliptoPlant"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/txtEucali"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgGuara"
        app:srcCompat="@drawable/eucalipto"
        tools:srcCompat="@drawable/eucalipto" />

    <ImageView
        android:id="@+id/imgCopa"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/copaPlant"
        app:layout_constraintBottom_toTopOf="@+id/imgGuara"
        app:layout_constraintEnd_toStartOf="@+id/txtCopa"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBarti"
        app:srcCompat="@drawable/copa_ba"
        tools:srcCompat="@drawable/copa_ba" />

    <TextView
        android:id="@+id/txtBarti"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ExpliBati"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txtCopa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/imgBarti"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/txtCopa"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ExpliCopa"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txtGuara"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgCopa"
        app:layout_constraintTop_toBottomOf="@+id/txtBarti" />

    <TextView
        android:id="@+id/txtGuara"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginEnd="25dp"
        android:text="@string/ExpliGua"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txtEucali"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imgGuara"
        app:layout_constraintTop_toBottomOf="@+id/txtCopa" />

    <TextView
        android:id="@+id/txtEucali"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="140dp"
        android:text="@string/ExpliEucalipto"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imgEucali"
        app:layout_constraintTop_toBottomOf="@+id/txtGuara" />

    <ImageView
        android:id="@+id/imgBarti"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/batimaoplant"
        app:layout_constraintBottom_toTopOf="@+id/imgCopa"
        app:layout_constraintEnd_toStartOf="@+id/txtBarti"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/baixados__1_"
        tools:srcCompat="@drawable/baixados__1_" />

</androidx.constraintlayout.widget.ConstraintLayout>