<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_launcher_background"
    android:backgroundTint="@color/white"
    tools:context=".CatalogoLixo">

    <TextView
        android:id="@+id/txtMapa"
        android:layout_width="148dp"
        android:layout_height="73dp"
        android:backgroundTint="@color/green"
        android:gravity="center"
        android:text="@string/TitleName5"
        android:textColor="@color/darkgreen"
        android:textSize="34sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <View
        android:id="@+id/view"
        android:layout_width="411dp"
        android:layout_height="93dp"
        android:background="#4BC550"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/view2"
        android:layout_width="415dp"
        android:layout_height="60dp"
        android:background="#4BC550"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgLixoEle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="208dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/darkgreen"
        android:contentDescription="@string/LixoEle"
        app:layout_constraintBottom_toTopOf="@+id/imgLixoReci"
        app:layout_constraintEnd_toStartOf="@+id/txtExpliEletro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lixoele"
        tools:srcCompat="@drawable/lixoele" />

    <ImageView
        android:id="@+id/imgLixoReci"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/darkgreen"
        android:contentDescription="@string/LixoReci"
        app:layout_constraintBottom_toTopOf="@+id/imgLixoNaoReci"
        app:layout_constraintEnd_toStartOf="@+id/txtExpliRecicla"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLixoEle"
        app:srcCompat="@drawable/lixoreci_2_"
        tools:srcCompat="@drawable/lixoreci_2_" />

    <ImageView
        android:id="@+id/imgLixoNaoReci"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="226dp"
        android:background="@drawable/ic_launcher_background"
        android:backgroundTint="@color/darkgreen"
        android:contentDescription="@string/LixoNaoReci"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toStartOf="@+id/txtExpliNaoReci"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLixoReci"
        app:srcCompat="@drawable/lixon_oreci__2_"
        tools:srcCompat="@drawable/lixon_oreci__2_" />

    <TextView
        android:id="@+id/txtExpliEletro"
        android:layout_width="250dp"
        android:layout_height="120dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="208dp"
        android:layout_marginBottom="32dp"
        android:text="@string/ExpliEletro"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txtExpliRecicla"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtExpliRecicla"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="58dp"
        android:text="@string/ExpliRecicla"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/txtExpliNaoReci"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.352"
        app:layout_constraintStart_toEndOf="@+id/imgLixoReci"
        app:layout_constraintTop_toBottomOf="@+id/txtExpliEletro" />

    <TextView
        android:id="@+id/txtExpliNaoReci"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="234dp"
        android:elegantTextHeight="false"
        android:freezesText="false"
        android:text="@string/ExpliNaoReci"
        android:textColor="@color/black"
        android:textColorHighlight="@color/black"
        android:textIsSelectable="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgLixoNaoReci"
        app:layout_constraintTop_toBottomOf="@+id/txtExpliRecicla" />


</androidx.constraintlayout.widget.ConstraintLayout>